// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab /> 선택되지 않은 탭을 누르면 해당 탭 페이지를 표시한다 1`] = `
<styled.div
  borderColor="gray.20"
>
  <styled.div>
    <Styled(Button)
      key="title1"
      onClick={[Function]}
      selected={true}
    >
      title1
    </Styled(Button)>
    <Styled(Button)
      key="title2"
      onClick={[Function]}
      selected={false}
    >
      title2
    </Styled(Button)>
  </styled.div>
  <styled.div
    borderColor="gray.20"
  />
  <TabPage
    title="title1"
  >
    탭 페이지 1
  </TabPage>
</styled.div>
`;

exports[`<Tab /> 선택되지 않은 탭을 누르면 해당 탭 페이지를 표시한다 2`] = `
<styled.div
  borderColor="gray.20"
>
  <styled.div>
    <Styled(Button)
      key="title1"
      onClick={[Function]}
      selected={false}
    >
      title1
    </Styled(Button)>
    <Styled(Button)
      key="title2"
      onClick={[Function]}
      selected={true}
    >
      title2
    </Styled(Button)>
  </styled.div>
  <styled.div
    borderColor="gray.20"
  />
  <TabPage
    title="title2"
  >
    탭 페이지 2
  </TabPage>
</styled.div>
`;

exports[`<Tab /> 정상적으로 렌더링된다 1`] = `
.c0 {
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <styled.div>
    <Styled(Button)
      key="title1"
      onClick={[Function]}
      selected={true}
    >
      title1
    </Styled(Button)>
    <Styled(Button)
      key="title2"
      onClick={[Function]}
      selected={false}
    >
      title2
    </Styled(Button)>
  </styled.div>
  <styled.div
    borderColor="gray.20"
  />
  <TabPage
    title="title1"
  >
    탭 페이지 1
  </TabPage>
</div>
`;
